feat: пользователи и бронирования разделены на 2 микросервиса